--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,24 @@
-
+{
+“name”: “Disney Passport Collector”,
+“short_name”: “Passport”,
+“description”: “Collect passport stamps from people around the world at Disney!”,
+“start_url”: “/index.html”,
+“display”: “standalone”,
+“orientation”: “portrait”,
+“background_color”: “#0D1B3E”,
+“theme_color”: “#0D1B3E”,
+“icons”: [
+{
+“src”: “icon-192.png”,
+“sizes”: “192x192”,
+“type”: “image/png”,
+“purpose”: “any maskable”
+},
+{
+“src”: “icon-512.png”,
+“sizes”: “512x512”,
+“type”: “image/png”,
+“purpose”: “any maskable”
+}
+]
+}
